tests/unit/default/syntax-error/127-add-fk-table-dot-name.x.t
---- IN ----
+FK%child.parent-id|
---- OUT ----
---- ERR ----
syntax: expected `=>` after `....parent-id` near `|` at position 19 - at line 1
---- EXIT ----
1
